src/app/template-list/template-list.component.scss
@import 'src/sass/components/_variables.scss';

.content-area {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	padding-left: 50px;
	padding-right: 50px;
}

.card {
  background-color: #fff;
  height: 210px;
  position: relative;
	min-width: 300px;
  overflow: hidden;
  text-align: center;
}

.card:before {
  content: '';
  background-image: $devmtn-circle;
  background-repeat: no-repeat;
  background-position: 150px 30%;
  background-size: cover;
  opacity: 0.14;
  z-index: 0;
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
}

.card .card-content {
	padding: 10px 0 20px 0;
}

.course-img {
  height: 70px;
}

.card .card-action {
  background-color: transparent;
  border-top: none;
  padding: 0;
}

.template-title {
  font-size: 1.5em;
  text-align: center;
  text-transform: uppercase;
}

.btn {
  background-color: $borderColor;
  border-radius: 20px;
  box-shadow: none;
}

